feat: add demo mode to most pages with scenarios
